// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (semicolon) /src/tslint/semicolon/test.ts[1, 20]: Missing semicolon

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
console.log('semi')

======
console.log(\\"semi\\");

>>>>>> after
"
`;
